--- a/.config
+++ b/.config
@@ -1,3 +1,4 @@
+[lscpu]
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
@@ -9,24 +10,66 @@ CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_OPENSSL=y
 CONFIG_ARIA2_SFTP=y
 CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_BUSYBOX_CONFIG_ARP=y
+# CONFIG_BUSYBOX_CONFIG_ASH_RANDOM_SUPPORT is not set
+CONFIG_BUSYBOX_CONFIG_BUNZIP2=y
+CONFIG_BUSYBOX_CONFIG_BZCAT=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_BZIP2_DECOMPRESS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_COMPRESS_USAGE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_CP_LONG_OPTIONS=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=384
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVE_ON_EXIT=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_ATIME=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_CTIME=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_DELETE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EMPTY=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EXECUTABLE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_EXEC_PLUS=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_FIND_MMIN is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_PREFER_IPV4_ADDRESS=y
 CONFIG_BUSYBOX_CONFIG_LAST_SUPPORTED_WCHAR=0
+CONFIG_BUSYBOX_CONFIG_LOCALE_SUPPORT=y
+CONFIG_BUSYBOX_CONFIG_LSMOD=y
+CONFIG_BUSYBOX_CONFIG_LSPCI=y
+CONFIG_BUSYBOX_CONFIG_LSUSB=y
+# CONFIG_BUSYBOX_CONFIG_MONOTONIC_SYSCALL is not set
+CONFIG_BUSYBOX_CONFIG_PKILL=y
+# CONFIG_BUSYBOX_CONFIG_RESIZE is not set
 CONFIG_BUSYBOX_CONFIG_SUBST_WCHAR=0
+# CONFIG_BUSYBOX_CONFIG_TASKSET is not set
+CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_UNICODE_SUPPORT=y
+CONFIG_DROPBEAR_ZLIB=y
+CONFIG_GNUTLS_ALPN=y
+CONFIG_GNUTLS_ANON=y
+CONFIG_GNUTLS_DTLS_SRTP=y
+CONFIG_GNUTLS_HEARTBEAT=y
+CONFIG_GNUTLS_OCSP=y
+CONFIG_GNUTLS_PSK=y
 CONFIG_IMAGEOPT=y
+# CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
+# CONFIG_KERNEL_BLK_DEV_THROTTLING is not set
+# CONFIG_KERNEL_CFS_BANDWIDTH is not set
+CONFIG_KERNEL_CGROUP_DEVICE=y
+CONFIG_KERNEL_CGROUP_FREEZER=y
+# CONFIG_KERNEL_KEYS is not set
+# CONFIG_KERNEL_MEMCG_SWAP is not set
+CONFIG_KERNEL_NET_CLS_CGROUP=y
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_FILE=y
 CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_MBEDTLS=y
-CONFIG_LIBCURL_NGHTTP2=y
 CONFIG_LIBCURL_NO_SMB="!"
 CONFIG_LIBCURL_PROXY=y
-CONFIG_LIBCURL_UNIX_SOCKETS=y
+CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_LIBSSH2_OPENSSL=y
+# CONFIG_LUA_ECO_MBEDTLS is not set
+CONFIG_LUA_ECO_OPENSSL=y
 CONFIG_LUCI_LANG_zh_Hans=y
+# CONFIG_MBEDTLS_ECP_DP_SECP521R1_ENABLED is not set
+CONFIG_MBEDTLS_HKDF_C=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
@@ -53,12 +96,13 @@ CONFIG_PACKAGE_alist=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_ariang=y
 CONFIG_PACKAGE_arp-scan=y
-CONFIG_PACKAGE_arptables-legacy=y
+CONFIG_PACKAGE_arp-scan-database=y
 CONFIG_PACKAGE_attendedsysupgrade-common=y
 CONFIG_PACKAGE_banip=y
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_block-mount=y
+CCONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_blockd=y
+CONFIG_PACKAGE_blockdev=y
 # CONFIG_PACKAGE_bnx2-firmware is not set
 CONFIG_PACKAGE_bridge=y
 CONFIG_PACKAGE_btrfs-progs=y
@@ -68,6 +112,7 @@ CONFIG_PACKAGE_containerd=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-sort=y
 CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_dbus=y
 CONFIG_PACKAGE_ddns-scripts=y
 CONFIG_PACKAGE_ddns-scripts-noip=y
 CONFIG_PACKAGE_ddns-scripts-services=y
@@ -78,6 +123,7 @@ CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_dhcp=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_nftset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
@@ -88,9 +134,17 @@ CONFIG_PACKAGE_drill=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fail2ban=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_findfs=y
+CONFIG_PACKAGE_firewall=m
 CONFIG_PACKAGE_fuse-utils=y
-CONFIG_PACKAGE_gawk=y
+CONFIG_PACKAGE_gdisk=y
+CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_hd-idle=y
+CONFIG_PACKAGE_hdparm=y
+CONFIG_PACKAGE_hostapd=y
+CONFIG_PACKAGE_hostapd-common=y
+CONFIG_PACKAGE_hostip=y
 CONFIG_PACKAGE_intel-microcode=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_ip6tables-nft=y
@@ -99,52 +153,51 @@ CONFIG_PACKAGE_ipset=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
+CONFIG_PACKAGE_iptables-mod-nat-extra=y
 CONFIG_PACKAGE_iptables-nft=y
-CONFIG_PACKAGE_iucode-tool=y
+CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_iwinfo=y
 # CONFIG_PACKAGE_kmod-amazon-ena is not set
 # CONFIG_PACKAGE_kmod-amd-xgbe is not set
 CONFIG_PACKAGE_kmod-arptables=y
-CONFIG_PACKAGE_kmod-asn1-decoder=y
-CONFIG_PACKAGE_kmod-asn1-encoder=y
 CONFIG_PACKAGE_kmod-ata-ahci=y
 CONFIG_PACKAGE_kmod-ata-core=y
 # CONFIG_PACKAGE_kmod-bnx2 is not set
 CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-cfg80211=y
 CONFIG_PACKAGE_kmod-crypto-acompress=y
 CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-blake2b=y
-CONFIG_PACKAGE_kmod-crypto-cbc=y
+CONFIG_PACKAGE_kmod-crypto-ccm=y
+CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-crc32=y
+CONFIG_PACKAGE_kmod-crypto-ctr=y
+CONFIG_PACKAGE_kmod-crypto-gcm=y
+CONFIG_PACKAGE_kmod-crypto-gf128=y
+CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
 CONFIG_PACKAGE_kmod-crypto-manager=y
 CONFIG_PACKAGE_kmod-crypto-null=y
 CONFIG_PACKAGE_kmod-crypto-rng=y
-CONFIG_PACKAGE_kmod-crypto-sha1=y
+CONFIG_PACKAGE_kmod-crypto-seqiv=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-crypto-sha3=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-xxhash=y
-CONFIG_PACKAGE_kmod-dax=y
-CONFIG_PACKAGE_kmod-dm=y
+# CONFIG_PACKAGE_kmod-e1000e is not set
 # CONFIG_PACKAGE_kmod-forcedeth is not set
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
-CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fuse=y
 CONFIG_PACKAGE_kmod-hid=y
 CONFIG_PACKAGE_kmod-hid-generic=y
-# CONFIG_PACKAGE_kmod-hwmon-core is not set
-# CONFIG_PACKAGE_kmod-i2c-algo-bit is not set
-# CONFIG_PACKAGE_kmod-i2c-core is not set
+CONFIG_PACKAGE_kmod-ifb=y
 # CONFIG_PACKAGE_kmod-igb is not set
 # CONFIG_PACKAGE_kmod-igc is not set
 CONFIG_PACKAGE_kmod-input-evdev=y
-CONFIG_PACKAGE_kmod-ip6-tunnel=y
 CONFIG_PACKAGE_kmod-ip6tables=y
-CONFIG_PACKAGE_kmod-ip6tables-extra=y
 CONFIG_PACKAGE_kmod-ipt-conntrack=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-core=y
@@ -156,12 +209,11 @@ CONFIG_PACKAGE_kmod-ipt-nat-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-ipt-physdev=y
+CONFIG_PACKAGE_kmod-ipt-raw=y
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-iptunnel4=y
-CONFIG_PACKAGE_kmod-iptunnel6=y
 # CONFIG_PACKAGE_kmod-ixgbe is not set
-CONFIG_PACKAGE_kmod-keys-encrypted=y
-CONFIG_PACKAGE_kmod-keys-trusted=y
+CONFIG_PACKAGE_kmod-lib-cordic=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
 CONFIG_PACKAGE_kmod-lib-lzo=y
 CONFIG_PACKAGE_kmod-lib-raid6=y
@@ -170,8 +222,8 @@ CONFIG_PACKAGE_kmod-lib-xxhash=y
 CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
 CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
+CONFIG_PACKAGE_kmod-mac80211=y
 CONFIG_PACKAGE_kmod-macvlan=y
-CONFIG_PACKAGE_kmod-nat46=y
 CONFIG_PACKAGE_kmod-net-selftests=y
 CONFIG_PACKAGE_kmod-nf-conncount=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
@@ -180,14 +232,18 @@ CONFIG_PACKAGE_kmod-nf-ipt6=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-oid-registry=y
+CONFIG_PACKAGE_kmod-nls-cp932=y
+CONFIG_PACKAGE_kmod-nls-cp936=y
+CONFIG_PACKAGE_kmod-nls-cp950=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
-CONFIG_PACKAGE_kmod-random-core=y
+CONFIG_PACKAGE_kmod-phylink=y
+CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-scsi-core=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-ssb=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-tpm=y
+# CONFIG_PACKAGE_kmod-tg3 is not set
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
@@ -198,22 +254,40 @@ CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
 CONFIG_PACKAGE_kmod-usb-net-smsc75xx=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
+CONFIG_PACKAGE_kmod-usb-xhci-hcd=y
 CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_kmod-veth=y
-CONFIG_PACKAGE_libacl=y
+# CONFIG_PACKAGE_knot-resolver_dnstap is not set
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
+CONFIG_PACKAGE_libavahi-client=y
+CONFIG_PACKAGE_libavahi-dbus-support=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcares=y
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_libdevmapper=y
+CONFIG_PACKAGE_libdaemon=y
+CONFIG_PACKAGE_libdb47=y
+CONFIG_PACKAGE_libdbi=y
+CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libelf=y
+CONFIG_PACKAGE_libevent2=y
+CONFIG_PACKAGE_libevent2-core=y
+CONFIG_PACKAGE_libevent2-openssl=y
+CONFIG_PACKAGE_libexpat=y
+CONFIG_PACKAGE_libfdisk=y
 CONFIG_PACKAGE_libffi=y
 CONFIG_PACKAGE_libfuse=y
+CONFIG_PACKAGE_libgcrypt=y
 CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libgmp=y
+CONFIG_PACKAGE_libgnutls=y
+CONFIG_PACKAGE_libgpg-error=y
+CONFIG_PACKAGE_libip4tc=y
+CONFIG_PACKAGE_libip6tc=y
 CONFIG_PACKAGE_libiperf3=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libiptext=y
@@ -221,6 +295,7 @@ CONFIG_PACKAGE_libiptext-nft=y
 CONFIG_PACKAGE_libiptext6=y
 CONFIG_PACKAGE_libiwinfo=y
 CONFIG_PACKAGE_libiwinfo-data=y
+CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_libldns=y
 CONFIG_PACKAGE_liblua=y
 CONFIG_PACKAGE_liblucihttp=y
@@ -228,6 +303,7 @@ CONFIG_PACKAGE_liblucihttp-lua=y
 CONFIG_PACKAGE_liblucihttp-ucode=y
 CONFIG_PACKAGE_liblzma=y
 CONFIG_PACKAGE_liblzo=y
+CONFIG_PACKAGE_libmicrohttpd-no-ssl=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libnatpmp=y
@@ -235,33 +311,38 @@ CONFIG_PACKAGE_libncurses=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnettle=y
 CONFIG_PACKAGE_libnfnetlink=y
-CONFIG_PACKAGE_libnghttp2=y
+CONFIG_PACKAGE_libopenldap=y
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
-CONFIG_PACKAGE_libparted=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libpython3=y
 CONFIG_PACKAGE_libreadline=y
+CONFIG_PACKAGE_libsasl2=y
 CONFIG_PACKAGE_libseccomp=y
+CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libssh2=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_libtalloc=y
+CONFIG_PACKAGE_libtasn1=y
+CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libubus-lua=y
+CONFIG_PACKAGE_libuci-lua=y
+CONFIG_PACKAGE_liburing=y
+# CONFIG_PACKAGE_libustream-mbedtls is not set
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
+CONFIG_PACKAGE_libwolfssl=y
+CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libxtables=y
-CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-app-acme=y
-CONFIG_PACKAGE_luci-app-adblock=y
-CONFIG_PACKAGE_luci-app-adblock-fast=y
-CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-attendedsysupgrade=y
-CONFIG_PACKAGE_luci-app-banip=y
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-dockerman=y
@@ -269,18 +350,14 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-natmap=y
-CONFIG_PACKAGE_luci-app-package-manager=y
+CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-acme-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-adblock-fast-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-attendedsysupgrade-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-banip-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-commands-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
@@ -289,12 +366,13 @@ CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-natmap-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-watchcat-zh-cn=y
 CONFIG_PACKAGE_luci-lib-base=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-ip=y
+CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
 CONFIG_PACKAGE_luci-light=y
@@ -305,13 +383,15 @@ CONFIG_PACKAGE_luci-mod-status=y
 CONFIG_PACKAGE_luci-mod-system=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mailsend=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_natmap=y
+CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_ntfs-3g=y
+CONFIG_PACKAGE_ntfs-3g-utils=y
 CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_parted=y
+# CONFIG_PACKAGE_procd-ujail is not set
 CONFIG_PACKAGE_px5g-mbedtls=y
 CONFIG_PACKAGE_python3=y
 CONFIG_PACKAGE_python3-asyncio=y
@@ -334,12 +414,13 @@ CONFIG_PACKAGE_python3-pip=y
 CONFIG_PACKAGE_python3-pkg-resources=y
 CONFIG_PACKAGE_python3-pydoc=y
 CONFIG_PACKAGE_python3-readline=y
+CONFIG_PACKAGE_python3-setuptools=y
 CONFIG_PACKAGE_python3-sqlite3=y
 CONFIG_PACKAGE_python3-unittest=y
 CONFIG_PACKAGE_python3-urllib=y
 CONFIG_PACKAGE_python3-uuid=y
 CONFIG_PACKAGE_python3-xml=y
-CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
@@ -350,7 +431,9 @@ CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
 CONFIG_PACKAGE_runc=y
 CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_tc-full=y
+CONFIG_PACKAGE_swconfig=y
+CONFIG_PACKAGE_syslog-ng=y
+CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
@@ -358,6 +441,9 @@ CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_ucode-mod-math=y
+CONFIG_PACKAGE_ucode-mod-nl80211=y
+CONFIG_PACKAGE_ucode-mod-rtnl=y
+CONFIG_PACKAGE_ucode-mod-uloop=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_vim=y
@@ -365,13 +451,14 @@ CONFIG_PACKAGE_vsftpd-tls=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_webui-aria2=y
 CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_wireless-regdb=y
+CONFIG_PACKAGE_wpa-supplicant=y
+CONFIG_PACKAGE_wsdd2=y
 CONFIG_PACKAGE_xtables-nft=y
 CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_zlib=y
 CONFIG_PACKAGE_ztdns=y
-CONFIG_PARTED_LVM2=y
-CONFIG_PARTED_READLINE=y
 CONFIG_PCRE2_JIT_ENABLED=y
-# CONFIG_PER_FEED_REPO is not set
 CONFIG_PREINITOPT=y
 CONFIG_SQLITE3_COLUMN_METADATA=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
@@ -379,8 +466,45 @@ CONFIG_SQLITE3_FTS3=y
 CONFIG_SQLITE3_FTS4=y
 CONFIG_SQLITE3_FTS5=y
 CONFIG_SQLITE3_RTREE=y
-CONFIG_TARGET_DEFAULT_LAN_IP_FROM_PREINIT=y
+# CONFIG_TARGET_EXT4_JOURNAL is not set
 CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_PREINIT_BROADCAST="192.168.19.255"
-CONFIG_TARGET_PREINIT_IP="192.168.19.1"
-CONFIG_TARGET_ROOTFS_PARTSIZE=1024
+CONFIG_TARGET_PREINIT_BROADCAST="192.168.10.255"
+CONFIG_TARGET_PREINIT_IP="192.168.10.1"
+CONFIG_TARGET_ROOTFS_PARTSIZE=384
+# CONFIG_WOLFSSL_HAS_ECC25519 is not set
+CONFIG_WOLFSSL_HAS_NO_HW=y
+# CONFIG_WOLFSSL_HAS_OPENVPN is not set
+CONFIG_WPA_MBO_SUPPORT=y
+CONFIG_WPA_MSG_MIN_PRIORITY=3
+# CONFIG_LIBCURL_NGHTTP2 is not set
+# CONFIG_LIBCURL_UNIX_SOCKETS is not set
+# CONFIG_OPENSSL_WITH_IDEA is not set
+# CONFIG_OPENSSL_WITH_MDC2 is not set
+# CONFIG_OPENSSL_WITH_SEED is not set
+# CONFIG_OPENSSL_WITH_WHIRLPOOL is not set
+CONFIG_PACKAGE_kmod-hwmon-core=y
+CONFIG_PACKAGE_kmod-i2c-algo-bit=y
+CONFIG_PACKAGE_kmod-i2c-core=y
+CONFIG_PACKAGE_kmod-pps=y
+CONFIG_PACKAGE_kmod-ptp=y
+# CONFIG_PACKAGE_libnghttp2 is not set
+CONFIG_PARTED_LVM2=y
+CONFIG_PARTED_READLINE=y
+CONFIG_PACKAGE_tc-full=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_parted=y
+CONFIG_PACKAGE_luci-ssl=y
+CONFIG_PACKAGE_luci-i18n-banip-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-adblock-fast-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-adblock-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
+CONFIG_PACKAGE_luci-app-banip=y
+CONFIG_PACKAGE_luci-app-adblock=y
+CONFIG_PACKAGE_luci-app-adblock-fast=y
+CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_losetup=y
+CONFIG_PACKAGE_libacl=y
+CONFIG_PACKAGE_libdevmapper=y
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_kmod-ip6-tunnel=y
+CONFIG_PACKAGE_kmod-ip6tables-extra=y
